Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/patterns/NullsInPatterns.out
NullsInPatterns.java:12:18: compiler.err.instanceof.pattern.no.subtype: compiler.misc.type.null, java.util.List
NullsInPatterns.java:23:18: compiler.err.instanceof.pattern.no.subtype: compiler.misc.type.null, java.util.List<?>
2 errors
